--- a/ansible/inventory/group_vars/kubernetes/k3s.yml
+++ b/ansible/inventory/group_vars/kubernetes/k3s.yml
@@ -32,7 +32,7 @@ k3s_server_manifests_urls:
   - url: https://kube-vip.io/manifests/rbac.yaml
     filename: kube-vip-rbac.yaml
   # Tigera Operator
-  - url: https://github.com/vdhict/home-lab/blob/e045aafe2451ee0e1030ed794cfe1f564df5b458/manifests/tigera-operator.yaml
+  - url: https://raw.githubusercontent.com/vdhict/home-lab/e045aafe2451ee0e1030ed794cfe1f564df5b458/manifests/tigera-operator.yaml
     filename: calico-tigera-operator.yaml
   # Prometheus Operator
   - url: https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.61.1/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
