--- a/kubernetes/manifests/tigera-operator.yaml
+++ b/kubernetes/manifests/tigera-operator.yaml
@@ -18151,7 +18151,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: tigera-operator
-          image: quay.io/tigera/operator:v1.29.0-arm64
+          image: quay.io/tigera/operator:release-v1.29-arm64
           imagePullPolicy: IfNotPresent
           command:
             - operator
@@ -18169,7 +18169,7 @@ spec:
             - name: OPERATOR_NAME
               value: "tigera-operator"
             - name: TIGERA_OPERATOR_INIT_IMAGE_VERSION
-              value: v1.29.0
+              value: v1.29.0-arm64
           envFrom:
             - configMapRef:
                 name: kubernetes-services-endpoint
