changes to provisioning config

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:9jKJtTTX,iv:jRyyZG8QovGZxfIsdLGEqVBZlPKZy0VcwUa8A+v1sF0=,tag:IUCuelXk0SPBm+ojHRDN3g==,type:str]
-ansible_user: ENC[AES256_GCM,data:eS1rxZI4,iv:/ilYMxt/gwDjGclH3jdZFa4hE4PGY0FBR73gdOLpyRo=,tag:Lf8rd69IycGW57dDl0XbOQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:fldKGN5G,iv:ETmQij4rK/nlGj5VM65EVcFpN3xIedv5SJ0S82I1Oa0=,tag:erYtsPvqzouRaK33vh+aQA==,type:str]
+kind: ENC[AES256_GCM,data:m+JkCEfm,iv:cepU4la/t3ghlWg7MorhsigkG6+24mREVXH2uZVBZe8=,tag:1iHAzGy3EZfJy5PtLr4jbQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:JA+fcwm2,iv:OvgLuKPm3rvmlQF7kZv+AubLkbYiwbTqpHz731kp8NM=,tag:77l6r6fgS/weXI2u5Nqvtw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:yUhBQSNY,iv:tnqlonqWuhpWwH3sibROGApw8MlkvexQnk2EwuDN04E=,tag:LKG2NLu1LBUex9gTCMcROg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxTGRiTmtHRHZ0RDByL2h3
-            SEJQWSthbk5KeXdCaFk4bUdRaHJ4djBjalNvCnhuNUY3VzJYUXBsVm9pVXNvUURx
-            MEpTcnhGSlVmY21LUlhQVzRuQjdZS1UKLS0tIENMYzBMT2FpWXhCbjk1cFdXbjFL
-            L2ZwQVpwem1HdEQ2ZkZ6dlpFaUpKM2sKcmFWjfzI2WDoaOojRoEDE6L8FT3fTbX+
-            W3W6sNnRaUthOytTLuEKND7dZS7UISm4gMIv3kaKN/oQgjxMEHmXcQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCQUk0S0JVZGZXTFJnTkkr
+            ejV3bFJoRjVMSnpudDF4dEFuYkVwaGNmS0ZVClEyMmFpWWpsV1pkTVpIcy9TMVRx
+            SU55YlZPZnRtb3kwb1JaekVCcE4rTkUKLS0tIDhOUU1XK3NuNm0xeTVEY3FEWHBO
+            Umoyalk5aUZidjJEaldEYmFncDRZQ28K7ZIxNls16jEEMt+d78Z1kdTSHTDf8EPW
+            EyNFyGRkMbrM0vpqFjYF2+uKAV7HltIjQlw6mgN+HXf2/ex+mzrBPQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-25T21:21:47Z"
-    mac: ENC[AES256_GCM,data:f1oEoGSVPpeApwLSvkDfyEbbkqc/Q/Oj4mkEUkNuiGfWK23kd5583zT6ZLI9DbvMBFKrXnr19InX4Pqv5BrTDb/3iop7/1GJ6quRsaYWRH7Qc2G5xpnldeKcdxWngKtf5Z7bJnP3Tadkt6awWJ4mgPMYn5SFS24Lngcko02c05I=,iv:CJ+bDbVoWtXC6V22rMDeBEeu5oWNVbjXKz1mi7izJ5s=,tag:isth6BeJG/PR4NYHvymekw==,type:str]
+    lastmodified: "2023-01-26T10:59:17Z"
+    mac: ENC[AES256_GCM,data:kIg2dWaF9+s57xm5j+KiPv77+MQr560YAnR1902zIggrGB2hXRtg7PEgI4O50zsIOj1BcrZtcFCPZ53Z2Wz1s20ssBAquQg2iwmutylI8AjrtfC3gEL7lrh1QZNR83iB6t2Z+hVd4Sh6Je9nQdPI0NjREo4Jj6NzYX8Wia4QYqg=,iv:nxh0f/mvOhxvJKgTAUlUzl8cgDVFk+dSy8dZS/2/Vd8=,tag:EpIvig5Dh7/JLgnTZKlplQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
