--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:pWWGZOy3,iv:ueoKak1trhBx/MtpaaPJFOpHZaiM95UxpZsZA+Tj9iw=,tag:f2SyCS3xfWZ2Nq0izsJx2g==,type:str]
-ansible_user: ENC[AES256_GCM,data:2dBZHoNt,iv:s+mpYHpc6V/fehlK07LLbYiNMBRIr+QJkrrgHQUCKTE=,tag:dApn0HkAV9cLLi0ewHimwQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:7ccf4QLb,iv:eD6IemcYddvf56U4ulLji1XyauwgDbrbSJK3yBcITZo=,tag:2WrNiAqN4NHIJOLMgypYpw==,type:str]
+kind: ENC[AES256_GCM,data:ptncQ9N1,iv:7y/O/vyVDtXY4aj/TCbMxl7CtwUDQLZl7dKPF9fpd7k=,tag:CECAwipUt8FqU+ZRhvp+Eg==,type:str]
+ansible_user: ENC[AES256_GCM,data:UBYIy8oK,iv:pcnCFWBLGAV2BCxLaRWGvL+LWGZtYqIG8hb/RvzPkis=,tag:qW8tgpBPFPGHnN6WrxHH5Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:EhgrP60w,iv:KSPmwL9xOmsPUo0y59D94leVHBXGp/tVvPsnemMtRu8=,tag:VYzQqsQZfSkziTvLOxZ2Og==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6cVY2QVZvdU16NlphSmtt
-            Z2tld0c2ZFd4aDBKNDNDWTF5NGo4SmVZZTJFCmFvSjRnU2xoS0FCT0cxKzhsdC9p
-            T3BTMUU5T3kxY1psaWZYOThaYXZMQnMKLS0tIHVnZ0JzQ0VNaVYwTlBrZG5iSHpU
-            SFRONGxOTXZLY0hQUFlKZWh6b1k5RmMKL7ND4JuBHjNKpOnUocQsItenzDc7vtsI
-            scv3X7k9MauHH8IGEO7vCKIDpl7iylUY/M8igapG/CzL0annOCKpew==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1UzAzNjEwcWNpWGNlNHlX
+            MHM2S25NbzR1RE81azhIVldGN21VZ0l2S3lVCklMWFFKbk92bEZtNk9zcDR4YS9G
+            L0xuaFkxTDFtQkpXaU9PaWpXcXlQb0EKLS0tIHZ6K3FSd295bEd3am5sSkUxVGlP
+            TVBKMnBTbzF0dThvbWJDMmdxZ1cyckUKOwmV+OGgXNQOchyyr30F5AIN993YJRNQ
+            osuvMpGDPFwSH7LaU0SDboNd44Vd06oGxwUABHaI9zqj9HLqtxg3UQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-25T21:21:47Z"
-    mac: ENC[AES256_GCM,data:Ey8hQYDexS0gYRwrjCtEtdoEHiq9Ri5ljMbYBTBhDMoogn2Xh4l4oTCvkrlG1iL9qUfjo467jPK5i2AjPuXle2/OXMsB+QHdMu6baW8r8CaGQDrbCimPjKcPD3sXUoyiGmx00PO8fuVxk8Dxb73xAoZYb/24TIbOR1oifI6UTQw=,iv:6GoLYqajOQq1T3pddDyMAJRT34gxfKMB/4M6gQ/TONY=,tag:ULHOYBVCI77kuGsvNeEAnA==,type:str]
+    lastmodified: "2023-01-26T10:59:17Z"
+    mac: ENC[AES256_GCM,data:za0nCWn5raWBF+JaQwm82qLwKPYtPAvTJRQyY6CGiN8ni+qFPmIp3XmZqHrjvSoanoJkTPdUvvqmn9WhzVAzCvypVB81yC+Dj042QNDfRGt9g+r0/1zOB+apjZuPO32JOVnRSCvz7tw0gqB4uqJYKXlXspNVcuEjwSp0dy+WMq0=,iv:XhznNfLG8nEA2w7ybgc0UjWYfWR/y8D0+ISqLinWDwU=,tag:2FdaRQ33SdmDtbal6cqmWg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
