--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:vFBpi2pD,iv:2X1rI1NUgBAcxnVSsDAIKtLlgHh4RdLgVvxDznZp0ho=,tag:WIxVUqKagy1xbB8rK74LTg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Y1kZWjOv,iv:3dopHdhwiAqfqAF5ZhaFfhCuG/MAc1mBs1MQnRyrmJ4=,tag:BhgGwIxlx8RGmLY5+XYNsQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:TZNAigSD,iv:cMQ/zy8PKfqsh0/jOTvd5RvMmSwMllrfxoMI7YRQ3hM=,tag:c3RnUmMCaRZwL0rtCD2RdQ==,type:str]
+kind: ENC[AES256_GCM,data:/hmmAdh/,iv:uW/nUOq/4w/wwFld4r9amo9W7uEUzQziLwbY44Zt/DA=,tag:4D4IWocUy49DOR9kE4SZFA==,type:str]
+ansible_user: ENC[AES256_GCM,data:moRTXDRV,iv:oAYZ70EgCkrzt+nxGOV84cyjHGh/mVwXDxgnxWsmmjs=,tag:dutG67tRq8XB+1ZzYqxk1g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:wLsW0X75,iv:McQ8LZYg5N6RW/qAUbWy2kEWyWUgKHJHXtROYTVW/aw=,tag:HRpB/+FKPfxCz7LL2/YAIA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPWlpjaHJzQ0wvWEFwekRx
-            UnBTaFViVXU5N25rL0g1TktVa1NKVk9BVjFBCm43Ujk2Rmh5cFM0clhTYUVtenls
-            ZHRkWG1YTnJwU1JZdjRTdG1PQ2FzZnMKLS0tIDBnb3pFRUp3bWorOUIrcmZZSVFK
-            S0FsemhMYmgvT2xPYm5OUTE3MWZHbVUKjByhCHQZhkOo6qQpuca1vOPWHIj8YDJy
-            9WTnRVFufnVCwm1VaxdzofFK9Nu+2NHVimiN9NRhVtDldPfOVJgJQw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZMlp0UjBqTG1tdFdkN0Fq
+            WTBnenRBQW9CSzZyczkxSDBuT1lvRHM5Z2dFCjErVFJZRjVMRHpob21oL25MQi90
+            ZXZ1c3ZjVEYrTW1vTC9aTXVBblVndTgKLS0tIDZTWUhCNEVkcWE4dHhVM2NCNmU2
+            MHd1V0tkR0doL1FYYkpVY2x6V01VcFkKWvuomZFCq+3bI4sVNZMeYHLJYexe5CHY
+            NjJrlKG9IfJP0E3IBPYkacIJF5AsVSFSqiBs35fYgyOBgT0I8B/sBA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-25T21:21:47Z"
-    mac: ENC[AES256_GCM,data:vMLgbv0jOs6v3QKIYY7pRijhM5yT53HmtPBjWxzvS9lgl8QdUcPzd0tWTCd4ZuuQvVhAeTXmVNHYfa00BqkUoDVyiGayG/EPmRFvEfkFxDZyGpFtTHMMFoLUfHKwT2140Q8drIjAt1ZW1GZJg0bOtGX92x18rZ8lL75I00iZBbk=,iv:XbqOKbXTVvGV0jbp5cysInCCWTVYQES3t7ePqjd5XbI=,tag:diSQfWWKxTarlJhLZSsZIA==,type:str]
+    lastmodified: "2023-01-26T10:59:17Z"
+    mac: ENC[AES256_GCM,data:Qn3Rl0D+WNXZjcyunnjMdpAK90iWkahv0pz794/rCvHk1acUd3GRBB+7y6UnL/LNsT1T64o0rKBti90WYs56Z9M0JgJ9yMdL4y+hLuLaenqna++lYvr9rz1arLVpS4sPX8aQnCyGZylIYGCb3Vm5R9+o7y5teAyWTQCgyGygTwQ=,iv:MB8kc7ejPogAnL3NVGkvOhUPhWkAZTVDhooAF2bi8bU=,tag:0z8K9T9r1kZZDBHH2M1E6g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
