--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:SlvCo8FO,iv:f7NiX5/zufJGnK0AyKRNgZwTEgAMvEAGiGsE5SqCgP0=,tag:5z9VLxmQRubiL15jrNg9kw==,type:str]
-ansible_user: ENC[AES256_GCM,data:Z4wb54QK,iv:mPB9OosQKCNKJMTCPnf1ccbJaO3MnmZxaaNqCtYw2mc=,tag:RFDiVNADfKu6YMSDOJC41g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:gFc3rG0H,iv:tn6XNjT+sI3zYIA/fS2c1hEEgCo8yxm8W94AyeiBze8=,tag:O27Txmeg62IAwnDX32oXfg==,type:str]
+kind: ENC[AES256_GCM,data:6qZ2T/v8,iv:r+qbkVvebi0axGjqI0uQrWiCMd0JGlLBggtHztsoDuk=,tag:Zu6uk+P8sDY7hmz9L07u9Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:qiX7YSZQ,iv:1fsrBBnlst5A/l7FdeDEORz4RdSULAhgdW8o3kKQ+DM=,tag:+g0QZfB/EXrKM6pQEvCGUQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:rnS/lns+,iv:DQFndsN/+Fnt796l+Pj38yvtZao1uml/FakjPzd+igo=,tag:rcN1pbrEW7J/IXH7N7N4PQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2RzlJc3pidy9NUjgzbm5H
-            WnRsbERNOGVvZkdvQjk2SHQwMzc3Q2x2c3k0Ck43SndXaE1iSlE2RkxEUGRIWjNG
-            SmRESVh1M0xucEFjc3AzUVNxcFEwYzAKLS0tIDNqdFJVMDN6Uzg3TDJYYmdiaG9h
-            WkxVYnRqcG1xRDNpT0RaSVg3bDZCTlkKHV8BqRQyXmaLZVEbq2/uqSbirVJ1LHf0
-            qFKwtkBhY/mI8wnCZt3eDTTbg7iWGJkDcefRpDTWBQKr5iLxOOjFIA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCNHdxVXJMUmJrcE05NHIy
+            ak5mcVNlN2Z2VkxrZjVSRXFlQlFJck1KbUMwCkZWdG9TbC9rRjEvK09DRlRMMHRl
+            ZHJkM3o4Z1RxMWJpR1NXSS9vLzBIZzAKLS0tIGxCVW9oMjNDRFZyQm1Ed1YxSThm
+            TjErTW1pcW1ISTZ5YTYxM1JGUXdjQzgKcDSJeHKuqVhu269qJVrVTDJKMdFNJpd/
+            xPMrz1xgGXHA98cXCdxD24R2ZZ/whntrZgWAf38NoCBrxM3N95uZew==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-25T21:21:47Z"
-    mac: ENC[AES256_GCM,data:O3gP2ncaGFmDwORghx40bOPqZArH97PEW2Vd2G53/YR+k17L5JqJzSFeW85prNyO9OrOnJXwPufdpK8KoCBiYilLx7q64bvi0lfEX6i/zU+mah77aapdl2gmRG7+lbIL6lw+1D3qaYbJE+FPs5PvX8hYXIGpfgT2BbyiUuNU3cs=,iv:F+9HHnEiTlS+1MvlwvDmeqzVLAcNRKQ/hNjtaJP/loI=,tag:K7Nzt81cHJREZjIl3HkHFQ==,type:str]
+    lastmodified: "2023-01-26T10:59:17Z"
+    mac: ENC[AES256_GCM,data:lj6gznGsxOZ02iqxtk6pbHNrG0OIfe2u/1W5lwyeObXTXbzTLVHyRGpiN6POGONeGc5p1xNf2iMJslGd8EnYofSJ4wnmZNufX5rwqZE4igOGo5hsDYZj/EwU6ZsOUKFwN01EYFHQsoAVNLmLNSuawe4KLo0pQOaOduk9ZCOTFgI=,iv:NPeEIB3UaVgnxkuJyCaWfL56C685xb/XRklj27Hv/Mc=,tag:ww6pusJWBIgLO9Mpe+9Qjg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
