--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:VhDoXBjc,iv:WvjFVuclIaKGnC1pOrD6Bfok+CCx0ny5JwFbqNCuPc8=,tag:o+tpIums3togxNhlIGL6Og==,type:str]
-ansible_user: ENC[AES256_GCM,data:S7pFaPlj,iv:/paVrXKiIWRmjH7jG/UAojcs4V4fIgYrvFRWB4f0nSs=,tag:Ibd0k+/vTntLsYgHW6UlaQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:6u+cr/V/,iv:VnyZCuVp+3Vk6QsjnZrfrOrt1jnl2GlpwrivRdkkzj0=,tag:0kuYS/DyDTcSEcIuMqjU1w==,type:str]
+kind: ENC[AES256_GCM,data:Rd5pCQfb,iv:NX9TuRmGNA+sgDZgbNy2WgYZ4nWf36uX4Rg6e7opc8c=,tag:NM9xl9PqLgOgmPW5XQqksQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:ZebL/Plv,iv:nEuNzk/6/W7OtOhknLokA5vUtsdI66C/BFxWLa1FBV8=,tag:2+AxVZmcf2fj8XTsDpkJBw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:tAxGezs/,iv:MlRlb69r60HWxtdqnwNvyqDBluHDB5rEyXCQ4O0Awhs=,tag:Y65FImQ93JG/KwEVbugV/w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBZjk5blUxRlFjRTNjVHBn
-            aEQ4RDRRR2hPMk00WTJPUE5FZTdvZXBxQnhZCnRrakU2UERqbzV5dEltRVFmTWdZ
-            ZXFFQzk3b1Q0TXQ3UWllemZQalVwTUUKLS0tIExlVzJuUUVBVzVGWmFIQUxBMVhM
-            NUNCMmd5ODk0RG9Jc1lZbkdGMDg0MU0KJc+Lvrq4bt9zRoIZoumQuEdgKDTAA/x/
-            jElrTlkk0ay7jVmx42bdgy0VcbPqpfKRb4PD+cAuSLKWIkYhfqxF1g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTaDhWSDZIVE5MVTMzK2k3
+            UkttOC9YRm1nNi9IQTdiUDNRMmoyVGEzV2hBClNEemVLa3JGRVY2WGtMWkpFNDFY
+            RjAwRUxZMjZub1M4V0N1bmhvc3lFNXMKLS0tIGV4UEtRNkJWajNsKzhsYVhUdS9m
+            ZkhPaUhaREpGd2kreHozbVp0aGlqY0EK9p2nATyroVPxkXoLWSvzR4xqIAJzKW0l
+            Ex7mFlnR0QdcIOc7bht8sTDZUXoxKkfJ97JzgsGL0h0gvYJqw/ZnkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-25T21:21:48Z"
-    mac: ENC[AES256_GCM,data:Pu6gzJvVM8BNi2rRkgmOJwAVI6sZpP1/VlF9dNzQko28D5UQMeOBlaFl7nLBvlgYKfSRhAnLBASdIaZO0RpJB6CIxdyBkb+yCr+c0psiTFDr6sJ4jScLQfA1rZCA5qE1gFah+579aU7/CTreynuEreQcq2hp1TQblIjKleXjvV8=,iv:hwqT+W0W0L1DCjkOt0zCFjqLpldkGAjoYypDY6bv1AM=,tag:RjqCARKjalWl6An/VkIWfw==,type:str]
+    lastmodified: "2023-01-26T10:59:17Z"
+    mac: ENC[AES256_GCM,data:hLalzsTePY25WTTgeLdiIDovDZqEtsRlyOQg43VS/sPKP96heKehKKHBfx2taNT+7uGjkxT5UvE85GtUR70LRooEBKiUqJBWgZDURTTuHkY+VhRT4PLdum8QtAn1f2W3ppf+OmuphG/9YV39HT37y2V+yvvu2l2x1K8fVcpfjm4=,iv:Toqk4vqFXi7meI3+J57QFvKSAq9mZgEybVrpHq+DLWs=,tag:5IZEAATPHGO6q3JmQoTTgg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
