change manifest tigera

--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:6qZ2T/v8,iv:r+qbkVvebi0axGjqI0uQrWiCMd0JGlLBggtHztsoDuk=,tag:Zu6uk+P8sDY7hmz9L07u9Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:qiX7YSZQ,iv:1fsrBBnlst5A/l7FdeDEORz4RdSULAhgdW8o3kKQ+DM=,tag:+g0QZfB/EXrKM6pQEvCGUQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:rnS/lns+,iv:DQFndsN/+Fnt796l+Pj38yvtZao1uml/FakjPzd+igo=,tag:rcN1pbrEW7J/IXH7N7N4PQ==,type:str]
+kind: ENC[AES256_GCM,data:Gyp9VdY6,iv:to1892O7K7SbAX2zjUSyEi56UMdbMvypdG0IrlqrHVU=,tag:junvviIgTdOhDpnJLKubGg==,type:str]
+ansible_user: ENC[AES256_GCM,data:5Lcy4cpZ,iv:X7qKUjuthrbnWagb+2XrKvsUfqLHQuCwkj7Y1ezul8s=,tag:XQjPgQZS+cnbX3xC+FRzfA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:xUP7e8om,iv:jaZnuaay9exolZysC18FZwFp9XwBQoOZLAfHutOVNcg=,tag:jZsohg99/ZO2yAwP/xaPZA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCNHdxVXJMUmJrcE05NHIy
-            ak5mcVNlN2Z2VkxrZjVSRXFlQlFJck1KbUMwCkZWdG9TbC9rRjEvK09DRlRMMHRl
-            ZHJkM3o4Z1RxMWJpR1NXSS9vLzBIZzAKLS0tIGxCVW9oMjNDRFZyQm1Ed1YxSThm
-            TjErTW1pcW1ISTZ5YTYxM1JGUXdjQzgKcDSJeHKuqVhu269qJVrVTDJKMdFNJpd/
-            xPMrz1xgGXHA98cXCdxD24R2ZZ/whntrZgWAf38NoCBrxM3N95uZew==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJeUt4RjVzNkc5MnJGMGtG
+            T01TRXJUL2crL3JDbEZEWG02Y2FXVHlPUFZVCmwzVGM4aFVIdCsrMUxMdzZPbWN6
+            VCtZaURuUll0N3hSREgxZGp5WHloL1UKLS0tIGpKdTV2SXVrSzdxY0xjc0VweFBJ
+            bVAwQ0YwWDR0RUlHaW9mNXQyVGJKOEEKQAFcp325YDI8XbAXznCjnRfvZT6n5PAd
+            LvpwFyLs6b/plaI1MJZgdrrMbbFIBh3TAoeffKu8GjyC1UxdlTecMg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T10:59:17Z"
-    mac: ENC[AES256_GCM,data:lj6gznGsxOZ02iqxtk6pbHNrG0OIfe2u/1W5lwyeObXTXbzTLVHyRGpiN6POGONeGc5p1xNf2iMJslGd8EnYofSJ4wnmZNufX5rwqZE4igOGo5hsDYZj/EwU6ZsOUKFwN01EYFHQsoAVNLmLNSuawe4KLo0pQOaOduk9ZCOTFgI=,iv:NPeEIB3UaVgnxkuJyCaWfL56C685xb/XRklj27Hv/Mc=,tag:ww6pusJWBIgLO9Mpe+9Qjg==,type:str]
+    lastmodified: "2023-01-26T16:04:00Z"
+    mac: ENC[AES256_GCM,data:kI2gFltEk/vwJC52M1cbYKa6GS7fjRqxu6d3R/8UyRnyIFPHSRshTMHLYxrZwnR1Rrvsh1GzHinWcZzMo4NygUL0elol/i/GycqiFLH0soPgu59yqV+iCbgCs51aSO3KCxg+pNyrRR4h5Icjxrs3xPmoe6AvdzsxpLTOXaqjrv8=,iv:7g5muSovB7X9kDBM/zLSeXBmDOoXRofy51kkkHcfulA=,tag:6EQCtWq+OS/U+ofmxFOKzQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
