--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:Rd5pCQfb,iv:NX9TuRmGNA+sgDZgbNy2WgYZ4nWf36uX4Rg6e7opc8c=,tag:NM9xl9PqLgOgmPW5XQqksQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:ZebL/Plv,iv:nEuNzk/6/W7OtOhknLokA5vUtsdI66C/BFxWLa1FBV8=,tag:2+AxVZmcf2fj8XTsDpkJBw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:tAxGezs/,iv:MlRlb69r60HWxtdqnwNvyqDBluHDB5rEyXCQ4O0Awhs=,tag:Y65FImQ93JG/KwEVbugV/w==,type:str]
+kind: ENC[AES256_GCM,data:dFkFpJVx,iv:W2gjeBwErKppl/ceuem5pMnIruU3nDt7bAtMAmb2Crc=,tag:avKZ/2rEz2eDJ7CGWXeZvw==,type:str]
+ansible_user: ENC[AES256_GCM,data:vspHKTKt,iv:uBLPSukLNFK1W57g0zciWdrkSUeEPzQY/M1cI4gqsk8=,tag:dQXouWr/V1OkUtRrbJ2SBA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:xEhQkkFh,iv:fSfqW6bGdMs1fbNC+SkGTtLSS/J9IWWAhXV8wOP5lu8=,tag:5ElTjstLlHwPgy7UDNLGsQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTaDhWSDZIVE5MVTMzK2k3
-            UkttOC9YRm1nNi9IQTdiUDNRMmoyVGEzV2hBClNEemVLa3JGRVY2WGtMWkpFNDFY
-            RjAwRUxZMjZub1M4V0N1bmhvc3lFNXMKLS0tIGV4UEtRNkJWajNsKzhsYVhUdS9m
-            ZkhPaUhaREpGd2kreHozbVp0aGlqY0EK9p2nATyroVPxkXoLWSvzR4xqIAJzKW0l
-            Ex7mFlnR0QdcIOc7bht8sTDZUXoxKkfJ97JzgsGL0h0gvYJqw/ZnkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvb25GdW9hQ3lLa1JJVkZ0
+            SXprWFkwbVFUSE9ES3R6aGpGcjVGejdYY2tJCkpNemVia3NpUVZDOHpybDVjWi93
+            K1QzZDRkeWl3U2pySSs1NnVDT1Q3aFkKLS0tIG5xMVgrK0RQQk9kYTF1Um5PNE9Z
+            REFSYXA2YmRGaUQxKzdKWHIwbDR0U1EKp7o9seULGfIIY2e6VtJcHdOCz2NYkvZC
+            EGCoaSOr1/jW8PxnzO0X58CrsHNBCLZSmOdgHQCaIPnkUI330VgcnA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T10:59:17Z"
-    mac: ENC[AES256_GCM,data:hLalzsTePY25WTTgeLdiIDovDZqEtsRlyOQg43VS/sPKP96heKehKKHBfx2taNT+7uGjkxT5UvE85GtUR70LRooEBKiUqJBWgZDURTTuHkY+VhRT4PLdum8QtAn1f2W3ppf+OmuphG/9YV39HT37y2V+yvvu2l2x1K8fVcpfjm4=,iv:Toqk4vqFXi7meI3+J57QFvKSAq9mZgEybVrpHq+DLWs=,tag:5IZEAATPHGO6q3JmQoTTgg==,type:str]
+    lastmodified: "2023-01-26T16:04:00Z"
+    mac: ENC[AES256_GCM,data:NSk2pyCm0uDfWSu2TDRb/puwpl6nS2KEmmCO5iAX3b3259YcUPQPw0UMNM6LLV5js4mQYXyGeMVM5QXc+lm7s85wr/EfSVN8nJQixyo9f3Lhe9SCWzMPlHM1NIz55q807oce3pf+Lkmk75aY/uIwSaqvCr0HeeKXS5ojtNB81kI=,iv:zbUMgJ0fV/OGPIyFS8APwxPHUjX+TRFKML9v7hLJSD4=,tag:S4tvM/WoPk6Xv7AGKQHFMw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
