--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:m+JkCEfm,iv:cepU4la/t3ghlWg7MorhsigkG6+24mREVXH2uZVBZe8=,tag:1iHAzGy3EZfJy5PtLr4jbQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:JA+fcwm2,iv:OvgLuKPm3rvmlQF7kZv+AubLkbYiwbTqpHz731kp8NM=,tag:77l6r6fgS/weXI2u5Nqvtw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:yUhBQSNY,iv:tnqlonqWuhpWwH3sibROGApw8MlkvexQnk2EwuDN04E=,tag:LKG2NLu1LBUex9gTCMcROg==,type:str]
+kind: ENC[AES256_GCM,data:oeG4cVxC,iv:wiuod9YdHnUrOSuAWYd3jnHZ5ZsZpnxlwWuikwuG+Kw=,tag:sNYhEyuoSP1sww3o9snU4Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:mHxB1WqI,iv:cH45AtmpYPEC5j39ggf/Rv4CqXHVAcwmfax1pnaMUNM=,tag:UW7zCg3iTniV+N04An/GZw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:tJynz+c5,iv:KA16fZ/p3rcHoU/hifn6FFs5Jh8VMTPTwogUgulvaRs=,tag:u/9b8OGveWs6ECgK85Wfng==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCQUk0S0JVZGZXTFJnTkkr
-            ejV3bFJoRjVMSnpudDF4dEFuYkVwaGNmS0ZVClEyMmFpWWpsV1pkTVpIcy9TMVRx
-            SU55YlZPZnRtb3kwb1JaekVCcE4rTkUKLS0tIDhOUU1XK3NuNm0xeTVEY3FEWHBO
-            Umoyalk5aUZidjJEaldEYmFncDRZQ28K7ZIxNls16jEEMt+d78Z1kdTSHTDf8EPW
-            EyNFyGRkMbrM0vpqFjYF2+uKAV7HltIjQlw6mgN+HXf2/ex+mzrBPQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNNGdQcmEvME1CMTl3a1pv
+            TFJMTFRIRlBDNjlmb25zVERMcENTTkNFOHdBCmZmcVordXA2WlRmNzFIcEpiQVNV
+            RXcxZWVTR1AyekV0TEdKS21VS2RsclkKLS0tIDBpTkY3NC9ZQzFJUXFHREtzN3Nu
+            b09lbi9reHdYTDRFRTBkVkVYeUFaTDAKx4kezwxlliq5FXIEVK531AzZbDfzOOJH
+            nhezw9JcX+NTvBouhNO2q/OqBQeuZDYqVdWk8k0Lpy4DWl9ldnwzuQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T10:59:17Z"
-    mac: ENC[AES256_GCM,data:kIg2dWaF9+s57xm5j+KiPv77+MQr560YAnR1902zIggrGB2hXRtg7PEgI4O50zsIOj1BcrZtcFCPZ53Z2Wz1s20ssBAquQg2iwmutylI8AjrtfC3gEL7lrh1QZNR83iB6t2Z+hVd4Sh6Je9nQdPI0NjREo4Jj6NzYX8Wia4QYqg=,iv:nxh0f/mvOhxvJKgTAUlUzl8cgDVFk+dSy8dZS/2/Vd8=,tag:EpIvig5Dh7/JLgnTZKlplQ==,type:str]
+    lastmodified: "2023-01-26T16:04:00Z"
+    mac: ENC[AES256_GCM,data:pDnPvwqisECvsV0tT3hnoJKQu6qIZkRV9xi7vpjMlfLJx7nr/XLbNK5AbDdtIkndMknSQT0z7P7byU4s1S2Gxgq7XjpoCKyA3//sBZkqeM4w3arn/0NcKdC0Pc9Y81PrvyAQ6OePvwR6kJo3gzyi5/SIA/pXzoTYs9VxpZZAj2M=,iv:1ZTT64j0Z/0DbvUC0oe4TTm6x1qisPk3g5BTKpuvaq0=,tag:dWWP6un1TCAU7NXsxYQ9dg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
