--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:ptncQ9N1,iv:7y/O/vyVDtXY4aj/TCbMxl7CtwUDQLZl7dKPF9fpd7k=,tag:CECAwipUt8FqU+ZRhvp+Eg==,type:str]
-ansible_user: ENC[AES256_GCM,data:UBYIy8oK,iv:pcnCFWBLGAV2BCxLaRWGvL+LWGZtYqIG8hb/RvzPkis=,tag:qW8tgpBPFPGHnN6WrxHH5Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:EhgrP60w,iv:KSPmwL9xOmsPUo0y59D94leVHBXGp/tVvPsnemMtRu8=,tag:VYzQqsQZfSkziTvLOxZ2Og==,type:str]
+kind: ENC[AES256_GCM,data:lHjgp9Gh,iv:j+eIC+ujlYHk1i+ljuT6hz0u/fu7HXzRwvSEKB4T2UE=,tag:XDazwGRETVHO5y3VlGMCNg==,type:str]
+ansible_user: ENC[AES256_GCM,data:Y1kV7m/c,iv:RbZKXZjsZmYezjLLsl47IPxQqZF1jCDoADq9Am8ajtw=,tag:SCpyP8nDqVaFfuoBCpCjHQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:oMO2CTe6,iv:kPDw5v9xpg2TKhRaIweeVro6cnmkw6qGVWklOqoR9SY=,tag:XaHnRgMboAgngLbtBivFJQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1UzAzNjEwcWNpWGNlNHlX
-            MHM2S25NbzR1RE81azhIVldGN21VZ0l2S3lVCklMWFFKbk92bEZtNk9zcDR4YS9G
-            L0xuaFkxTDFtQkpXaU9PaWpXcXlQb0EKLS0tIHZ6K3FSd295bEd3am5sSkUxVGlP
-            TVBKMnBTbzF0dThvbWJDMmdxZ1cyckUKOwmV+OGgXNQOchyyr30F5AIN993YJRNQ
-            osuvMpGDPFwSH7LaU0SDboNd44Vd06oGxwUABHaI9zqj9HLqtxg3UQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGUwWlhjdDRzTmJVMzI1
+            OWdQekxkMkE4OU5vdzBmcXk3NmtIVXpyZ0c4CktnNG52clMwRDViUmxQNG9uQmU0
+            MGh4V0JwOUpaMW9TTnlyRzRGbXVCZVEKLS0tIDdRWHNpbmk3M3pCV3o2aE5jMXdX
+            SzR0WXRpa0dWazFHVXNyK0ozMC93VjgKHd7SbKEOa1V6DpiJu7Sdny8tpkq3ia6S
+            +C8i/1V31Z/OKXP5Ls5VUJMYK2Rl19JKs0dcsSNpYN13QSDoAUZLzA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T10:59:17Z"
-    mac: ENC[AES256_GCM,data:za0nCWn5raWBF+JaQwm82qLwKPYtPAvTJRQyY6CGiN8ni+qFPmIp3XmZqHrjvSoanoJkTPdUvvqmn9WhzVAzCvypVB81yC+Dj042QNDfRGt9g+r0/1zOB+apjZuPO32JOVnRSCvz7tw0gqB4uqJYKXlXspNVcuEjwSp0dy+WMq0=,iv:XhznNfLG8nEA2w7ybgc0UjWYfWR/y8D0+ISqLinWDwU=,tag:2FdaRQ33SdmDtbal6cqmWg==,type:str]
+    lastmodified: "2023-01-26T16:04:00Z"
+    mac: ENC[AES256_GCM,data:iTVrI3PIgdIk/UyGnp1FFDTVIPZNY5bkdFJt2abH1x3TLLWggGF4LAjPV4R6xITXo0K1WLeDEThAjYzPW2LiQ0Xly73tT3UV+/Hwni8j2CZa3ftDV9DdGcKHTVA/uNABsz2tDrGIhLUsszZNHNSagBnAXA3vYZJjlAEC0e39sEU=,iv:3nzRytgZy+mPKfU2IgGJKFpi7mXo5g3qnuTp/vsFrTw=,tag:3Sn5fDNkY1xsgJ4LSyZqew==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
