--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:oeG4cVxC,iv:wiuod9YdHnUrOSuAWYd3jnHZ5ZsZpnxlwWuikwuG+Kw=,tag:sNYhEyuoSP1sww3o9snU4Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:mHxB1WqI,iv:cH45AtmpYPEC5j39ggf/Rv4CqXHVAcwmfax1pnaMUNM=,tag:UW7zCg3iTniV+N04An/GZw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:tJynz+c5,iv:KA16fZ/p3rcHoU/hifn6FFs5Jh8VMTPTwogUgulvaRs=,tag:u/9b8OGveWs6ECgK85Wfng==,type:str]
+kind: ENC[AES256_GCM,data:lZDo8aPn,iv:OU6QuoQiGDDmLsc6cLN5ZWUkVcKBTo0OofWOM+yMYEo=,tag:30/TdeFjZrykB0gsebMU2g==,type:str]
+ansible_user: ENC[AES256_GCM,data:0aRhMs8J,iv:5+ToL+0zFJqJw7bdyX9duoghRuIg4WzTPAWsLenCo08=,tag:eiBIA6Br9zxrFRhSwfafNg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Nky+HBx1,iv:Auf2C739ksV8wzumfgkiwOAmJ6g2KAc/tj2iQtOR+x4=,tag:SUzLva6IJ1CM09zF2sxW3A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNNGdQcmEvME1CMTl3a1pv
-            TFJMTFRIRlBDNjlmb25zVERMcENTTkNFOHdBCmZmcVordXA2WlRmNzFIcEpiQVNV
-            RXcxZWVTR1AyekV0TEdKS21VS2RsclkKLS0tIDBpTkY3NC9ZQzFJUXFHREtzN3Nu
-            b09lbi9reHdYTDRFRTBkVkVYeUFaTDAKx4kezwxlliq5FXIEVK531AzZbDfzOOJH
-            nhezw9JcX+NTvBouhNO2q/OqBQeuZDYqVdWk8k0Lpy4DWl9ldnwzuQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpOE9pZkhmNmZyNEM4TXRG
+            UkhFdCtJbDBmc1V4blo3ZmN0cVpqYXpGS1FrCjZNS01WWmZlTDZibVhmd3RIZk52
+            cjdEczJNMXdrY1NzN0Z0TmVZTUF5V00KLS0tIGpYSnBlekN0U21mL3FGTjNFZldY
+            d2lOTjRjMnh6RWJLUWFTbDJxc2VnOWMKo191yvugljqt8MeCLgOWSY+SHo1+IUlX
+            xNxKsXbSseCFZOwhs+H3xOWovf3XUr9ldC9hUGuErClOomagWv5gdQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T16:04:00Z"
-    mac: ENC[AES256_GCM,data:pDnPvwqisECvsV0tT3hnoJKQu6qIZkRV9xi7vpjMlfLJx7nr/XLbNK5AbDdtIkndMknSQT0z7P7byU4s1S2Gxgq7XjpoCKyA3//sBZkqeM4w3arn/0NcKdC0Pc9Y81PrvyAQ6OePvwR6kJo3gzyi5/SIA/pXzoTYs9VxpZZAj2M=,iv:1ZTT64j0Z/0DbvUC0oe4TTm6x1qisPk3g5BTKpuvaq0=,tag:dWWP6un1TCAU7NXsxYQ9dg==,type:str]
+    lastmodified: "2023-01-28T21:23:39Z"
+    mac: ENC[AES256_GCM,data:ZNUoggT8FdrWfxAIXWoMgQoDxW7wYtHeKNNH8iSmCEBnP7CL3FpGFtSY+2Orwa02tyaVarctcENzvcA1V8yQoeMKQ0aMri9Y7kvjWaYZIjTM8YUlT1G7i1BI3R6hmraoINL/J7i/h0rkSjO9Fix7E+S/D9N8/Kbo1ehcdvIP5bk=,iv:PE90CoRRQmGDaUu87THexSzc5YUuEe/psymJrgsTd5k=,tag:vOeYmM5GbnC4LJf90QpBMQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
