--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:lHjgp9Gh,iv:j+eIC+ujlYHk1i+ljuT6hz0u/fu7HXzRwvSEKB4T2UE=,tag:XDazwGRETVHO5y3VlGMCNg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Y1kV7m/c,iv:RbZKXZjsZmYezjLLsl47IPxQqZF1jCDoADq9Am8ajtw=,tag:SCpyP8nDqVaFfuoBCpCjHQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:oMO2CTe6,iv:kPDw5v9xpg2TKhRaIweeVro6cnmkw6qGVWklOqoR9SY=,tag:XaHnRgMboAgngLbtBivFJQ==,type:str]
+kind: ENC[AES256_GCM,data:46o6yv0x,iv:xVmz9dH+7FgxdDY8Aer+wUJbR3/WJGYaR+oidF97js4=,tag:muunWu6KWJw+xGrdeJLRfg==,type:str]
+ansible_user: ENC[AES256_GCM,data:WFEFhzah,iv:jSqTWl2AhIljhhGs9Y3oDdtmGb+iSRxRUYreD9v6taM=,tag:CkeJ9KEd9qAQXR5VzKEx0w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:XL6yvvpw,iv:H9+FZq938Yh+E96eriZ/QOwZDIDnJ1WhL4I144hiY3I=,tag:g9voUfmgvRhWyC5NDyB5Lw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGUwWlhjdDRzTmJVMzI1
-            OWdQekxkMkE4OU5vdzBmcXk3NmtIVXpyZ0c4CktnNG52clMwRDViUmxQNG9uQmU0
-            MGh4V0JwOUpaMW9TTnlyRzRGbXVCZVEKLS0tIDdRWHNpbmk3M3pCV3o2aE5jMXdX
-            SzR0WXRpa0dWazFHVXNyK0ozMC93VjgKHd7SbKEOa1V6DpiJu7Sdny8tpkq3ia6S
-            +C8i/1V31Z/OKXP5Ls5VUJMYK2Rl19JKs0dcsSNpYN13QSDoAUZLzA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKalN3ZnBlUjBRa1c4alkv
+            ZGw3ZTFoQy9DZnRydTNJVTBYeEh4M3hiVldRClhCRkVzWlIyczRzdTRMclRMWTIv
+            L3Fja09pSFhpYmhtL044UUZKRGlNQW8KLS0tIGdHUXhBNi9MbFpPazZPa0hmOFRD
+            Y1dqOXhHcWQvV0sybUR2ZDhhRTRST3cKlVvE97DXD5mIAXP2OG88EStoTV72TLMz
+            2QqNwTxviLDVFKd2SvSpUDCmv7J46WNMdyKHrJ2ME4l7QktpDEICfw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T16:04:00Z"
-    mac: ENC[AES256_GCM,data:iTVrI3PIgdIk/UyGnp1FFDTVIPZNY5bkdFJt2abH1x3TLLWggGF4LAjPV4R6xITXo0K1WLeDEThAjYzPW2LiQ0Xly73tT3UV+/Hwni8j2CZa3ftDV9DdGcKHTVA/uNABsz2tDrGIhLUsszZNHNSagBnAXA3vYZJjlAEC0e39sEU=,iv:3nzRytgZy+mPKfU2IgGJKFpi7mXo5g3qnuTp/vsFrTw=,tag:3Sn5fDNkY1xsgJ4LSyZqew==,type:str]
+    lastmodified: "2023-01-28T21:23:39Z"
+    mac: ENC[AES256_GCM,data:heQD40RTRfzQ7JGZWKhPhE/pFsp2q35jHN3B9fgwrGWk1kPxetbFovpqiWbBPp0SbNnMpVNKG9PKft3UrcHpG6wPZtKvTM77oTiJEU/9VcMlDYaIqXLXu8uRVeMzwqrvSGhAihBYQ9ywqYPUzOAMsJHdempHV69kqHrNuQRN1eM=,iv:JGsj2IRajlA8stSJWhW0824VZEzVOdA6EKlF7E7X2XA=,tag:GoeK6VIB1V4sWHI0UAG7MQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
