--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:VmGWB4d7,iv:bj+chHhm2F0FEMlLm/zSdXY4U6M8Kf6hn9uC5MIaLb8=,tag:oPwD+6wqrwjlw78QKTPztg==,type:str]
-ansible_user: ENC[AES256_GCM,data:FpvZgIK1,iv:kp1bfaYDbtohIfeYKa9kF/SXpk6UxaIp3Kx/Svhd5uM=,tag:p9x4346EhtleQxvXSwlZfA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:tdWmRGtK,iv:CMgwvVY8lZaply4mMq9AFgcBeVzMzI5l/GNb1VeNNok=,tag:rHWdq1dEyXQF7Vmh5kIknw==,type:str]
+kind: ENC[AES256_GCM,data:l4K1CRYB,iv:M5jfnEROyJkbm//0+rQngGklWU1CbpT7J5/Yxc0R9BQ=,tag:hbqWAD6uGstlZbkTW1X9LA==,type:str]
+ansible_user: ENC[AES256_GCM,data:h2TVgwCH,iv:Uog0lNs1JGCZy5h0Flh5ioU7nKaMo3oDAW6qvIAkEz4=,tag:TVCdqoYnFV4kSORibqO6vA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:rVLtxQBV,iv:/S54tVdSxQ00c1GhpPnliIJ1JQd8QBqUACXpLESJRGc=,tag:6jbkg1dvzL6iBcsV0AVu8A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3c1ROd2FOdi8ydVd0VE1s
-            VVo1OHdWdWJaajEvQkRCQkpCMTVaa1lET3lFCkpxS3VUYnFFUitrWC9tNjBwL1JI
-            VEN2cDN1L3BEa3o2TFZkOFNlS0x5ZkEKLS0tIEp3ckVIUVZ1TGJiN1dJL0JNeWIw
-            T3hFcDhzMGZNMDBsZ05qU3ZDVkVZV1kK7yUqoVDAlhYYFYbSM+8O5gK64GdDMIJS
-            4SurbtZPDTee3GEoUKcoF6w8pCwEFLqGMbdiRIoa+Kx7JXfSnw7X1w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1d09IMXpDQkYyU0NucUt4
+            MlNVdnRBcUtiQmdQRWFTU2hBa1cvUVEzSWhJCjdTVjY3QW5kb1U1aWVsVXh1TktT
+            SUd6NGkwK3BMWHNSZVhhN01TM3Z3VTQKLS0tIFNTbkVraUFOUGs1Z3Jvak82UHFO
+            SUN1VlBoWnhhOW9NSFhXQ2NEM1hsTVEKQGRACajoGDLopEo111kA0BTzsha5Z8LG
+            /TDJIG0Gm/5/ps7DAdPPI64SlTwAYjvHEgrk1B+gEFtzMYNFTI3Hug==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T16:04:00Z"
-    mac: ENC[AES256_GCM,data:R2wHzVWDD+LOQ+sdyGo9RVot33Tuj5389Tqf/fRykQJJ4w3Q1Pz03LNiDqI0Y4Z36GxOQViP1UxEDVZfA80/TFm8tE3ntSVUukiHLJJm4ZvtW1CqiP+GE6ya+6Gu0pAN7jz1889WgtunxP32v66Ms10xVWshkAk7vLQng4pQalk=,iv:ZB+Wek2t1ggBWXrJPAE1uVrn5wRvHxR/iAsEjDN9XdU=,tag:2qPu+splwEjJCr9ThQ7JGg==,type:str]
+    lastmodified: "2023-01-28T21:23:39Z"
+    mac: ENC[AES256_GCM,data:MsciCKND1kDS2VHnz0u7MxYw3N3ZbBx752UmR9bnAC+aYW1dhis/w/yTQgHasvUrdLFJTw0S1OyyP/yVXPHCR20j5Vexo1PVDk2KEXr/cUGKww+XEPn6EUAVgqwGxJxr3YZfxdIyihCOwLQVP9ymUhQPA9ais3C/woSuwvojzKc=,iv:vSH+yuX8GOVCX4zNQFVnAF/O5dJcAEPKDD+3Qf+bZTo=,tag:FxTONJLZsATiKp+Pt8GDEw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
