--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:Gyp9VdY6,iv:to1892O7K7SbAX2zjUSyEi56UMdbMvypdG0IrlqrHVU=,tag:junvviIgTdOhDpnJLKubGg==,type:str]
-ansible_user: ENC[AES256_GCM,data:5Lcy4cpZ,iv:X7qKUjuthrbnWagb+2XrKvsUfqLHQuCwkj7Y1ezul8s=,tag:XQjPgQZS+cnbX3xC+FRzfA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:xUP7e8om,iv:jaZnuaay9exolZysC18FZwFp9XwBQoOZLAfHutOVNcg=,tag:jZsohg99/ZO2yAwP/xaPZA==,type:str]
+kind: ENC[AES256_GCM,data:mgC9u+kI,iv:WGm8hkw0haLdZRNysu+FKYjVPRAlhFHGIgIDL8pi7UU=,tag:FFXgaxLDIg5s6+ASisrPXQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:rKgEm0A2,iv:CRYrEhZMZ2Gwb4ESoV2iwQ1g3WfaktRpBjk+QqOSCLI=,tag:aws5gBpc5kMHkCULFJwUsQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:qrapmXuO,iv:4lPb1HaLaDlDX95BJIGqgXvhCJBG7Zs1w4uY80QIOik=,tag:anH/zvnUzOg6+g8H9Yc4gg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJeUt4RjVzNkc5MnJGMGtG
-            T01TRXJUL2crL3JDbEZEWG02Y2FXVHlPUFZVCmwzVGM4aFVIdCsrMUxMdzZPbWN6
-            VCtZaURuUll0N3hSREgxZGp5WHloL1UKLS0tIGpKdTV2SXVrSzdxY0xjc0VweFBJ
-            bVAwQ0YwWDR0RUlHaW9mNXQyVGJKOEEKQAFcp325YDI8XbAXznCjnRfvZT6n5PAd
-            LvpwFyLs6b/plaI1MJZgdrrMbbFIBh3TAoeffKu8GjyC1UxdlTecMg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NDV1SWJVdXBsTlNHb2kv
+            d1luM2xXZXIxWFRQR21hWkdESUp4emFoOWdBCkNCRDNvcWVwM0E5eFNrTDVkTllG
+            V0pIMzUweG9SSFRzaHhKT2ovM0E3WVkKLS0tIGxPSVFoQmpFVVh1NklxamphSTk2
+            MkdaTSs5cWhjdk5uU0FnSG1ZNTFUdGsKW9nFr5DeZ+YsIM2vVnk7ZdHw13AoNoli
+            5mXs6JdgeUiBKZmvhvLU3cD4v3hNNJbm23FYZRUibRA2Nc+npUIrqA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T16:04:00Z"
-    mac: ENC[AES256_GCM,data:kI2gFltEk/vwJC52M1cbYKa6GS7fjRqxu6d3R/8UyRnyIFPHSRshTMHLYxrZwnR1Rrvsh1GzHinWcZzMo4NygUL0elol/i/GycqiFLH0soPgu59yqV+iCbgCs51aSO3KCxg+pNyrRR4h5Icjxrs3xPmoe6AvdzsxpLTOXaqjrv8=,iv:7g5muSovB7X9kDBM/zLSeXBmDOoXRofy51kkkHcfulA=,tag:6EQCtWq+OS/U+ofmxFOKzQ==,type:str]
+    lastmodified: "2023-01-28T21:23:39Z"
+    mac: ENC[AES256_GCM,data:OeTPjSxuv+wBF/3pe8OG5D6OrZAVQzq2L376V5BUjftgNB6OV2pTpWf8d2IQirW6biWzqpMUVo8i8EMs0kkCwiv4L4htbRt6/4cvotIz3ZiQ+wlheHVD0TlfexSLEqLf0Be5TNfuEt2peIOKxLfZ3F5KuAzbXhMXJN82xIUd0N4=,iv:dEBRP3blSM/tf+KbrVE2zGOcfoFZ64AsYWoNtNvzJVo=,tag:ANXcGfSa6k6Jg8ggAtXiKQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
