--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:dFkFpJVx,iv:W2gjeBwErKppl/ceuem5pMnIruU3nDt7bAtMAmb2Crc=,tag:avKZ/2rEz2eDJ7CGWXeZvw==,type:str]
-ansible_user: ENC[AES256_GCM,data:vspHKTKt,iv:uBLPSukLNFK1W57g0zciWdrkSUeEPzQY/M1cI4gqsk8=,tag:dQXouWr/V1OkUtRrbJ2SBA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:xEhQkkFh,iv:fSfqW6bGdMs1fbNC+SkGTtLSS/J9IWWAhXV8wOP5lu8=,tag:5ElTjstLlHwPgy7UDNLGsQ==,type:str]
+kind: ENC[AES256_GCM,data:JTmMNMFv,iv:gbNc6a2l1kAbrsPNL7dovwRnxf3MA8SLqWzfVug4Q0w=,tag:xTgLT92E4wAELznVpvi6Og==,type:str]
+ansible_user: ENC[AES256_GCM,data:bzKYjZEa,iv:/lkWcbewSFuEigf5hceT6HlBeNbbQAunNkJQ68EK/EA=,tag:lDC8s55b4zQ0JaObYF0hKA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:yDV25aR6,iv:FGZNfHfyiDq+1YTVn4wtwPI++ROpCzraXLr19yU4r+8=,tag:+W3BJl+aysflglx/obTFxQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvb25GdW9hQ3lLa1JJVkZ0
-            SXprWFkwbVFUSE9ES3R6aGpGcjVGejdYY2tJCkpNemVia3NpUVZDOHpybDVjWi93
-            K1QzZDRkeWl3U2pySSs1NnVDT1Q3aFkKLS0tIG5xMVgrK0RQQk9kYTF1Um5PNE9Z
-            REFSYXA2YmRGaUQxKzdKWHIwbDR0U1EKp7o9seULGfIIY2e6VtJcHdOCz2NYkvZC
-            EGCoaSOr1/jW8PxnzO0X58CrsHNBCLZSmOdgHQCaIPnkUI330VgcnA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmZGIwY1kwd2w1d2pMMnpM
+            cEplOFR3MHk2UFZBZ29EaFZLaHFHbVNaakhzCjY2K3VpdVk4NjJnZUN5b0xTWjU2
+            a1ZLZ3pmUEVkcXczWitIaUgzdG9zckEKLS0tIDQvaWgxVEw2WDVrWktTTXdFQlBk
+            dzQ3bEdUZG0zTFdESEhLSHh1di9OWXMKM2LMaDt9K64GJrO3+2l75UtenjVCOgyK
+            HyMse48JOkwHAHc97vcV3rWp35xibV0IraoT37gyK4TRwKX9KaDBKQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-26T16:04:00Z"
-    mac: ENC[AES256_GCM,data:NSk2pyCm0uDfWSu2TDRb/puwpl6nS2KEmmCO5iAX3b3259YcUPQPw0UMNM6LLV5js4mQYXyGeMVM5QXc+lm7s85wr/EfSVN8nJQixyo9f3Lhe9SCWzMPlHM1NIz55q807oce3pf+Lkmk75aY/uIwSaqvCr0HeeKXS5ojtNB81kI=,iv:zbUMgJ0fV/OGPIyFS8APwxPHUjX+TRFKML9v7hLJSD4=,tag:S4tvM/WoPk6Xv7AGKQHFMw==,type:str]
+    lastmodified: "2023-01-28T21:23:39Z"
+    mac: ENC[AES256_GCM,data:Q3CVuBvTCOQaQ+gmqa0KlE78PqGG6sBB43ls/d2cxzC8RI4QgqNrhiIUenz88o0zngRqKUhnfsUd79iagnFc1Ez1dM1d5t5rnTDUGVSmJE2UxqoaouGxugCaTZncP9srPL/BkTB7X/WHrVOWSeASbpMSpcWrMFsC9BJ32CcqXUo=,iv:dpzwKmq3PNveJeXGj7k6VGa7roFdtWTsiWw2aTxGr2E=,tag:pvvg9NLIOZpF6uFLUN/Nbw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
